# expat

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yml  entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: Home.py  utils.py
app/pages/: Comparison.py  Sandbox.py
data_viz/: analysis.ipynb  app.py  streamlit_app.py  utils.py
database/: .gitignore
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: slugify.sql
dbt/models/: sources.yml
dbt/models/1-clean/: clean__numbeo_cost_of_living.sql  clean__numbeo_cost_of_living_data.sql
dbt/models/1-clean/cities/: clean__config_cities.sql
dbt/models/1-clean/config/: clean__config_cities.sql  clean__config_jobs.sql
dbt/models/1-clean/earnings/: clean__job_earnings.sql
dbt/models/1-clean/forex/: clean__forex_forex_daily.sql
dbt/models/1-clean/numbeo/: clean__numbeo_cost_of_living.sql  clean__numbeo_cost_of_living_data.sql
dbt/models/2-preprocess/: prep__avg_forex_rate.sql  prep__job_earnings.sql  prep__numbeo_cost_of_living.sql
dbt/models/3-entity/: activity.sql  cost_of_living.sql  entity__cost_of_living.sql  entity__job_earnings.sql  job_earnings.sql
dbt/models/4-dataset/: dataset__cost_earnings_comparison.sql
dbt/seeds/: seed_activity_mapping.csv
llm/: .gitignore  README.md  llm.py  model.py
loading/: cities.py  config.yml  costofliving.py  forex.py  job_info.json  llm_earnings.py  utils.py
raw_data/: job_info.json
streamlit/: Home.py  utils.py
streamlit/pages/: Comparison.py  Sandbox.py
