[tool.poetry]
name = "expat-calc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.2"
dlt = "^0.4.12"
harlequin = "^1.20.0"
dbt-core = "^1.8.1"
dbt-duckdb = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
